--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
@@ -130,6 +130,7 @@
     <Compile Include="NServiceBusConfig.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Scenarios\PublishAllEvents.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
