--- a/src/SFA.DAS.ProviderRelationships.Document.Repository/SFA.DAS.ProviderRelationships.Document.Repository.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Document.Repository/SFA.DAS.ProviderRelationships.Document.Repository.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.1.2" />
+    <PackageReference Include="StructureMap" Version="4.7.0" />
   </ItemGroup>
 
 </Project>
