--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -116,6 +116,7 @@
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="DependencyResolution\StructureMapDependencyScope.cs" />
     <Compile Include="DependencyResolution\StructureMapScopeModule.cs" />
+    <Compile Include="Routing\RouteDataKeys.cs" />
     <Compile Include="StartupEndpoint.cs" />
     <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Extensions\UrlHelperExtensions.cs" />
@@ -126,7 +127,6 @@
     <Compile Include="Mappings\HealthCheckMappings.cs" />
     <Compile Include="Mappings\ProviderMappings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UrlParameterKeys.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AddProviderViewModel.cs" />
     <Compile Include="ViewModels\HealthCheckViewModel.cs" />
