--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -24,6 +24,7 @@
         <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="2.1.1" />
         <PackageReference Include="StructureMap" Version="4.7.0" />
         <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+        <PackageReference Include="Z.EntityFramework.Plus.EFCore" Version="1.8.10" />
     </ItemGroup>
 
     <ItemGroup>
