--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/App.config
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/App.config
@@ -7,7 +7,7 @@
     <appSettings>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
         <add key="EnvironmentName" value="LOCAL" />
-    </appSettings>]
+    </appSettings>
     <entityFramework>
         <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
             <parameters>
