--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
+        <OutputType>Exe</OutputType>
         <TargetFramework>net462</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     </PropertyGroup>
