--- a/src/TestConsoleApp/TestConsoleApp.csproj
+++ b/src/TestConsoleApp/TestConsoleApp.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Model\SFA.DAS.ProviderRelationships.Document.Model.csproj" />
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Repository\SFA.DAS.ProviderRelationships.Document.Repository.csproj" />
-    <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
   </ItemGroup>
 
 </Project>
