--- a/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.UnitTests/SFA.DAS.ProviderRelationships.UnitTests.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper " Version="7.0.1" />
+        <PackageReference Include="EfCore.TestSupport" Version="1.5.0" />
         <PackageReference Include="MediatR" Version="5.1.0" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="2.1.4" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
