--- a/src/SFA.DAS.ProviderRelationships.Document.Repository/SFA.DAS.ProviderRelationships.Document.Repository.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Document.Repository/SFA.DAS.ProviderRelationships.Document.Repository.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="StructureMap" Version="4.7.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Model\SFA.DAS.ProviderRelationships.Document.Model.csproj" />
+  </ItemGroup>
+
 </Project>
