--- a/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="SFA.DAS.Testing" Version="2.0.2" />
+    <PackageReference Include="System.Net.Http" Version="4.3.3" />
   </ItemGroup>
 
   <ItemGroup>
