--- a/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
@@ -5,19 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="2.1.3" />
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="SFA.DAS.Testing" Version="2.0.2" />
-    <PackageReference Include="System.Net.Http" Version="4.1.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Model\SFA.DAS.ProviderRelationships.Document.Model.csproj" />
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Repository\SFA.DAS.ProviderRelationships.Document.Repository.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="System.Net.Http" />
   </ItemGroup>
 </Project>
