--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.Azure.WebJobs" Version="2.2.0" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="2.2.0" />
         <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66" />
+        <PackageReference Include="morelinq" Version="3.0.0" />
         <PackageReference Include="NLog.Schema" Version="4.5.10" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
