--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -14,6 +14,9 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.Azure.WebJobs" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="2.2.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="2.1.1" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="2.1.1" />
         <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66" />
         <PackageReference Include="NLog.Schema" Version="4.5.10" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
