--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -7,6 +7,7 @@
         <add key="ClientValidationEnabled" value="true"/>
         <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true"/>
         <add key="EnvironmentName" value="LOCAL"/>
+        <add key="InstrumentationKey" value=""/>
         <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
         <add key="webpages:Version" value="3.0.0.0"/>
         <add key="webpages:Enabled" value="false"/>
