--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -122,6 +122,7 @@
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="DependencyResolution\StructureMapDependencyScope.cs" />
     <Compile Include="DependencyResolution\StructureMapScopeModule.cs" />
+    <Compile Include="Extensions\TempDataDictionaryExtensions.cs" />
     <Compile Include="Mappings\AccountProviderLegalEntityMappings.cs" />
     <Compile Include="NServiceBusStartup.cs" />
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
@@ -139,6 +140,8 @@
     <Compile Include="ViewModels\AccountProviderLegalEntities\GetAccountProviderLegalEntityRouteValues.cs" />
     <Compile Include="ViewModels\AccountProviderLegalEntities\GetAccountProviderLegalEntityViewModel.cs" />
     <Compile Include="ViewModels\AccountProviderLegalEntities\OperationViewModel.cs" />
+    <Compile Include="ViewModels\AccountProviderLegalEntities\UpdateAccountProviderLegalEntityRouteValues.cs" />
+    <Compile Include="ViewModels\AccountProviderLegalEntities\UpdateAccountProviderLegalEntityViewModel.cs" />
     <Compile Include="ViewModels\HealthCheck\HealthCheckRouteValues.cs" />
     <Compile Include="ViewModels\HealthCheck\HealthCheckViewModel.cs" />
     <Compile Include="ViewModels\AccountProviders\AccountProvidersRouteValues.cs" />
@@ -185,6 +188,7 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Views\AccountProviderLegalEntities\Get.cshtml" />
+    <Content Include="Views\AccountProviderLegalEntities\Update.cshtml" />
     <Content Include="Views\HealthCheck\Index.cshtml" />
     <Content Include="Views\AccountProviders\Add.cshtml" />
     <Content Include="Views\AccountProviders\Added.cshtml" />
