--- a/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.UnitTests/SFA.DAS.ProviderRelationships.Api.Client.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
@@ -7,10 +7,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
         <PackageReference Include="Moq" Version="4.10.0" />
-        <PackageReference Include="NUnit" Version="3.10.1" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
+        <PackageReference Include="NUnit" Version="3.11.0" />
+        <PackageReference Include="NUnit3TestAdapter" Version="3.11.2" />
         <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
     </ItemGroup>
 
