--- a/src/SFA.DAS.ProviderRelationships.ReadStore.Configuration.Tests/SFA.DAS.ProviderRelationships.ReadStore.Configuration.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.ReadStore.Configuration.Tests/SFA.DAS.ProviderRelationships.ReadStore.Configuration.UnitTests.csproj
@@ -2,7 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-
+    <LangVersion>latest</LangVersion>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
