--- a/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client/SFA.DAS.ProviderRelationships.Api.Client.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
@@ -16,6 +16,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.6" />
+        <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="2.1.1" />
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
         <PackageReference Include="SFA.DAS.Http" Version="1.2.4" />
         <PackageReference Include="StructureMap" Version="4.7.0" />
