--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -208,6 +208,10 @@
       <Project>{7f2f7041-07e0-48c0-a65a-e7ff06c65532}</Project>
       <Name>SFA.DAS.ProviderRelationships.Api.Client</Name>
     </ProjectReference>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore.Configuration\SFA.DAS.ProviderRelationships.ReadStore.Configuration.csproj">
+      <Project>{CC910810-CB95-4174-ABFA-81F137E741EF}</Project>
+      <Name>SFA.DAS.ProviderRelationships.ReadStore.Configuration</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj">
       <Project>{9e04ae68-5753-49e7-ac56-a0cf005d19d6}</Project>
       <Name>SFA.DAS.ProviderRelationships.Types</Name>
