--- a/src/SFA.DAS.ProviderRelationships.ReadStore/SFA.DAS.ProviderRelationships.ReadStore.csproj
+++ b/src/SFA.DAS.ProviderRelationships.ReadStore/SFA.DAS.ProviderRelationships.ReadStore.csproj
@@ -17,13 +17,13 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta-63127-02" PrivateAssets="All" />
+        <PackageReference Include="SFA.DAS.AutoConfiguration" Version="1.0.2" />
         <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.1" />
         <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.1" />
         <PackageReference Include="StructureMap" Version="4.7.0" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.ReadStore.Configuration\SFA.DAS.ProviderRelationships.ReadStore.Configuration.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj" />
     </ItemGroup>
 
