--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -54,9 +54,12 @@
     <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNet.WebApi" Version="5.2.6" />
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="2.0.1" />
+    <PackageReference Include="Microsoft.IdentityModel.Protocols.WsFederation" Version="5.3.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="5.3.0" />
     <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
     <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.0.0" />
     <PackageReference Include="Microsoft.Owin.Security" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Owin.Security.ActiveDirectory" Version="4.0.0" />
     <PackageReference Include="Microsoft.Owin.Security.Cookies" Version="4.0.0" />
     <PackageReference Include="NLog.Schema" Version="4.5.10" />
     <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
@@ -67,9 +70,11 @@
     <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="4.0.9" />
     <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="4.0.9" />
     <PackageReference Include="SFA.DAS.UnitOfWork.WebApi" Version="4.0.9" />
-    <PackageReference Include="SFA.DAS.OidcMiddleware" Version="2.0.0.61553" />
+    <!--<PackageReference Include="SFA.DAS.OidcMiddleware" Version="2.0.0.61553" />-->
     <PackageReference Include="SFA.DAS.Validation" Version="5.1.3" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
+      <!--shouldn't need this...-->
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.3.0" />
     <PackageReference Include="WebApi.StructureMap" Version="1.0.21" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
   </ItemGroup>
@@ -99,9 +104,13 @@
   <ItemGroup>
     <Compile Include="ActionParameters\Relationships\GetRelationshipsParameters.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Authentication\AuthenticationStartup.cs" />
+    <Compile Include="Authentication\IAuthenticationStartup.cs" />
+    <Compile Include="Authentication\AuthorizeRemoteOnlyAttribute.cs" />
     <Compile Include="Controllers\HealthCheckController.cs" />
     <Compile Include="Controllers\RelationshipsController.cs" />
     <Compile Include="DependencyResolution\ApiDataRegistry.cs" />
+    <Compile Include="DependencyResolution\AuthenticationRegistry.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="DependencyResolution\ProviderRelationshipsApiDbContextFactory.cs" />
