--- a/src/SFA.DAS.ProviderRelationships.Api/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Api/Web.config
@@ -346,14 +346,30 @@
                 <bindingRedirect oldVersion="0.0.0.0-4.1.3.0" newVersion="4.1.3.0"/>
             </dependentAssembly>
             <dependentAssembly>
-                <!-- SFA.DAS.OidcMiddleware has a reference to version of 3.0.1.0 of this, so we redirect and cross our fingers -->
                 <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
                 <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
             </dependentAssembly>
             <dependentAssembly>
-                <!-- SFA.DAS.OidcMiddleware has a reference to version of 3.0.1.0 of this, so we redirect and cross our fingers -->
                 <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
                 <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Microsoft.IdentityModel.Tokens" culture="neutral" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Microsoft.IdentityModel.Logging" culture="neutral" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Microsoft.IdentityModel.Protocols.WsFederation" culture="neutral" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
+            </dependentAssembly>
+            <!-- something brings this in as a dependency, but according to this page, we shouldn't have any references to it  -->
+            <!-- todo: check if it works as is|find what brings it in and remove/update as necessary -->
+            <dependentAssembly>
+                <assemblyIdentity name="System.IdentityModel.Tokens.Jwt" culture="neutral" publicKeyToken="31bf3856ad364e35" />
+                <bindingRedirect oldVersion="0.0.0.0-5.3.0.0" newVersion="5.3.0.0" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
