--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -114,6 +114,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="HttpErrorResult\Error.cs" />
+    <Compile Include="HttpErrorResult\ErrorResult.cs" />
     <Compile Include="Logging\LoggingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
