--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -116,6 +116,7 @@
     </Compile>
     <Compile Include="HttpErrorResult\Error.cs" />
     <Compile Include="HttpErrorResult\ErrorResult.cs" />
+    <Compile Include="HttpErrorResult\HttpRequestMessageExtensions.cs" />
     <Compile Include="Logging\LoggingContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
