--- a/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api/SFA.DAS.ProviderRelationships.Api.csproj
@@ -102,11 +102,11 @@
     <Compile Include="Authentication\AuthorizeRemoteOnlyAttribute.cs" />
     <Compile Include="Controllers\HealthCheckController.cs" />
     <Compile Include="Controllers\AccountProviderLegalEntitiesController.cs" />
+    <Compile Include="Data\ProviderRelationshipsApiDbContextFactory.cs" />
     <Compile Include="DependencyResolution\ApiDataRegistry.cs" />
     <Compile Include="DependencyResolution\AuthenticationRegistry.cs" />
     <Compile Include="DependencyResolution\DefaultRegistry.cs" />
     <Compile Include="DependencyResolution\IoC.cs" />
-    <Compile Include="DependencyResolution\ProviderRelationshipsApiDbContextFactory.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
