--- a/src/SFA.DAS.ProviderRelationships.Audit/SFA.DAS.ProviderRelationships.Audit.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Audit/SFA.DAS.ProviderRelationships.Audit.csproj
@@ -51,6 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\UpdatedPermissionsEventAuditCommand.cs" />
     <Compile Include="DependencyResolution\AuditRegistry.cs" />
     <Compile Include="Commands\CreatedAccountEventAuditCommand.cs" />
     <Compile Include="Commands\CreatedAccountEventAuditCommandHandler.cs" />
@@ -58,6 +59,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Types\SFA.DAS.ProviderRelationships.Types.csproj">
+      <Project>{9E04AE68-5753-49E7-AC56-A0CF005D19D6}</Project>
+      <Name>SFA.DAS.ProviderRelationships.Types</Name>
+    </ProjectReference>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj">
       <Project>{C7FBD758-8531-4E65-BE21-6F013C6C6B25}</Project>
       <Name>SFA.DAS.ProviderRelationships</Name>
