--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -158,10 +158,10 @@
     <Compile Include="ViewModels\AccountProviders\GetAccountProviderViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="403.html" />
-    <Content Include="404.html" />
-    <Content Include="Error.html" />
+    <Content Include="Content\htm\403.html" />
+    <Content Include="Content\htm\404.html" />
     <Content Include="Content\css\application.css" />
+    <Content Include="Content\htm\Error.html" />
     <Content Include="Content\js\application.js" />
     <Content Include="Content\lib\govuk-frontend\dist\assets\images\favicon.ico" />
     <Content Include="Content\lib\govuk-frontend\dist\assets\images\govuk-apple-touch-icon-152x152.png" />
