--- a/src/SFA.DAS.ProviderRelationships.Audit/SFA.DAS.ProviderRelationships.Audit.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Audit/SFA.DAS.ProviderRelationships.Audit.csproj
@@ -51,7 +51,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Commands\DeletedPermissionsEventAuditCommand.cs" />
+    <Compile Include="Commands\DeletedPermissionsEventAuditCommandHandler.cs" />
     <Compile Include="Commands\UpdatedPermissionsEventAuditCommand.cs" />
+    <Compile Include="DataAccess\MapperExtensions\UpdatedPermissionsEventAuditMapperExtensions.cs" />
     <Compile Include="DependencyResolution\AuditRegistry.cs" />
     <Compile Include="Commands\CreatedAccountEventAuditCommand.cs" />
     <Compile Include="Commands\CreatedAccountEventAuditCommandHandler.cs" />
